--- a/style.css
+++ b/style.css
@@ -16,3 +16,13 @@ body {
 		background-position: 0% 50%;
 	}
 }
+.icons {
+    margin-bottom: 6px;
+    margin-right: 5px;
+}
+#features{
+    background-color: white;
+}
+#testimonial{
+
+}
