--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-body {
+.gradient-background {
 	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient-animation 15s ease infinite;
 	height: 100vh;
 }
 
-@keyframes gradient {
+@keyframes gradient-animation {
 	0% {
 		background-position: 0% 50%;
 	}
@@ -20,9 +20,19 @@ body {
     margin-bottom: 6px;
     margin-right: 5px;
 }
+.display-4, .text-body-secondary{
+	text-align: center;
+}
 #features{
     background-color: white;
 }
 #testimonial{
 
+}
+#pricing{
+	background-color: white;
+}
+.profile-img {
+    border-radius: 50%;
+    height: 100px;
 }
